--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Click==7.0
 dominate==2.6.0
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
+Flask-Testing==0.7.1
 Flask-WTF==0.15.1
 itsdangerous==1.1.0
 Jinja2==2.10
