--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dominate==2.6.0
 firebase-admin==5.0.2
 Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
 Flask-Testing==0.7.1
 Flask-WTF==0.15.1
 google-api-core==1.31.1
