--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blinker==1.4
+Bootstrap-Flask==1.7.0
 CacheControl==0.12.6
 cachetools==4.2.2
 certifi==2021.5.30
@@ -8,7 +9,6 @@ Click==7.0
 dominate==2.6.0
 firebase-admin==5.0.2
 Flask==1.0.2
-Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Testing==0.7.1
 Flask-WTF==0.15.1
